--- a/crystal_client_templates/partial_model_list_invalid_properties.mustache
+++ b/crystal_client_templates/partial_model_list_invalid_properties.mustache
@@ -1,20 +1,15 @@
-      {{#isEnum}}
-      {{#isContainer}}
-
-      invalid_properties.push({{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.error_message) unless {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.all_valid?(@{{{name}}}{{#isMap}}.try(&.values){{/isMap}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      {{/isContainer}}
-      {{^isContainer}}
-
-      invalid_properties.push({{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.error_message) unless {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.valid?(@{{{name}}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      {{/isContainer}}
-      {{/isEnum}}
-      {{^isEnum}}
       {{#required}}
       {{^isNullable}}
+
       invalid_properties.push("\"{{{name}}}\" is required and cannot be null") if @{{{name}}}.nil?
       {{/isNullable}}
       {{/required}}
+
       if _{{{name}}} = @{{{name}}}
+      {{#isEnum}}
+        invalid_properties.push(OpenApi::EnumValidator.error_message("{{{name}}}", {{#lambda.uppercase}}valid_values_for_{{{name}}}{{/lambda.uppercase}})) unless OpenApi::EnumValidator.valid?("{{{name}}}", _{{{name}}}{{#isMap}}.values{{/isMap}}, {{#lambda.uppercase}}valid_values_for_{{{name}}}{{/lambda.uppercase}})
+      {{/isEnum}}
+      {{^isEnum}}
       {{^allowableValues}}
       {{#isModel}}
         invalid_properties.concat(_{{{name}}}.list_invalid_properties_for("{{{name}}}")) if _{{{name}}}.is_a?(OpenApi::Validatable)
@@ -78,5 +73,5 @@
 
         invalid_properties.push(_{{{name}}}.error_message) if !_{{{name}}}.valid?
       {{/allowableValues}}
-      end
       {{/isEnum}}
+      end
