--- a/crystal_client_templates/partial_model_valid.mustache
+++ b/crystal_client_templates/partial_model_valid.mustache
@@ -1,18 +1,14 @@
-      {{#isEnum}}
-      {{#isContainer}}
-      return false unless {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.all_valid?(@{{{name}}}{{#isMap}}.try(&.values){{/isMap}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      {{/isContainer}}
-      {{^isContainer}}
-      return false unless {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}}.valid?(@{{{name}}}{{#required}}{{^isNullable}}, false{{/isNullable}}{{/required}})
-      {{/isContainer}}
-      {{/isEnum}}
-      {{^isEnum}}
+
       {{#required}}
       {{^isNullable}}
       return false if @{{{name}}}.nil?
       {{/isNullable}}
       {{/required}}
       if _{{{name}}} = @{{{name}}}
+      {{#isEnum}}
+        return false unless OpenApi::EnumValidator.valid?("{{{name}}}", _{{{name}}}{{#isMap}}.values{{/isMap}}, {{#lambda.uppercase}}valid_values_for_{{{name}}}{{/lambda.uppercase}})
+      {{/isEnum}}
+      {{^isEnum}}
       {{^allowableValues}}
       {{#isModel}}
         return false if _{{{name}}}.is_a?(OpenApi::Validatable) && !_{{{name}}}.valid?
@@ -54,5 +50,5 @@
       {{#allowableValues}}
         return false if !_{{{name}}}.valid?
       {{/allowableValues}}
-      end
       {{/isEnum}}
+      end
