Remove unused param name from EnumValidator#valid?

--- a/crystal_client_templates/partial_model_enum_class.mustache
+++ b/crystal_client_templates/partial_model_enum_class.mustache
@@ -44,7 +44,7 @@
     end
 
     def valid? : Bool
-      OpenApi::EnumValidator.valid?("{{{name}}}", data, VALID_VALUES, false)
+      OpenApi::EnumValidator.valid?(data, VALID_VALUES, false)
     end
 
     def validate : Nil
